--- a/h1.md
+++ b/h1.md
@@ -30,14 +30,16 @@ The article teaches you how to install and use the most important functionality 
 This article is about the building blocks for controlling a vast horde of computers.  
   
 The main takeaways are:  
--What to install for a slave (salt-minion)  
--What to install for a master  (salt-master)  
+-What you should install for a slave (salt-minion)  
+-What you should install for a master  (salt-master)  
 -What actions are needed for the slave (edit the master's dns/ip in the minion's conf)  
 -What actions are needed for the master (Accept the key from the slave)  
   
 **[Vagrant Revisited – Install & Boot New Virtual Machine in 31 seconds](https://terokarvinen.com/2017/04/11/vagrant-revisited-install-boot-new-virtual-machine-in-31-seconds/)**  
   
-A quick and painless article about initializing a virtual machine quick - something I just had to try out!  
+A quick and painless article about initializing a virtual machine quick - something I just had to try out! The article has detailed instructions and commands to install and implement Vagrant & Virtualbox.  
+  
+My experiment didn't go as planned:  
   
 ````
 E: Package 'virtualbox' has no installation candidate
@@ -59,7 +61,9 @@ Call to virConnectOpen failed: Failed to connect socket to '/var/run/libvirt/lib
 ````
   
 The error said something about ssh, so I thought it might have been an issue, so I installed ssh:  
-	*sudo apt-get install -y ssh*  
+	sudo apt-get install -y ssh  
+	
+
   
 That didn't solve my problem, so I was just left with the problem of not having a virtualbox-pkg installed. I followed a [tutorial](https://www.how2shout.com/linux/installing-virtualbox-app-on-debian-11-bullseye/) (parts 1-5) and managed to install virtualbox with that.  
   
