--- a/h1.md
+++ b/h1.md
@@ -107,22 +107,22 @@ VBoxManage: error: Context: "EnableStaticIPConfig(Bstr(pszIp).raw(), Bstr(pszNet
 So, I deduced that I might have messed up something by providing a new repo address and a new version of VirtualBox.  
   
 I removed the source I had added to sources on the previous tutorial:  
-	*sudo rm /etc/apt/sources.list.d/virtualbox.list*  
+````sudo rm /etc/apt/sources.list.d/virtualbox.list````  
   
 I wasn't able to find a pkg to install from the Debian default repos:  
-	*sudo apt search virtualbox*  
+````sudo apt search virtualbox````  
   
-So the article needs updating, as it's not possible to install and use vargant + virtualbox with the instructions it provides (on a Debian 11/Virtualbox 6.0-system). 
+So the article by Karvinen needs updating, as it's not possible to install and use vargant + virtualbox with the instructions it provides (on a Debian 11/Virtualbox 6.0-system). 
   
 **[Command Line Basics Revisited](https://terokarvinen.com/2020/command-line-basics-revisited/)**
   
-The article goes throught the basic Linux commands. Changing directories, manipulating files, ssh-connections, manual pages, using tab to minimize typing, the locations very everything important is located and installing software.
+The article goes throught the basic Linux commands. Changing directories, manipulating files, ssh-connections, manual pages, using tab to minimize manual typing, the locations of everything important and installing software.
 
 I took a break @ 14.51.  
   
 Started again @ 15.42.  
   
-##a) Mikä meininki? Selvitä, mikä käyttöjärjestelmä (Linuxin versio) sinulla on käytössä, ja mikä Saltin versio.  / Figure out Linux & Salt versions
+## a) Mikä meininki? Selvitä, mikä käyttöjärjestelmä (Linuxin versio) sinulla on käytössä, ja mikä Saltin versio.  / Figure out Linux & Salt versions
   
 So, this is how I figured out my Linux version and my salt version:  
 	
@@ -133,13 +133,15 @@ So, this is how I figured out my Linux version and my salt version:
 ![Pic 1. Versions](pics/h1/1.png)  
 *I had version 3002.6 of Salt and Debian 11*  
   
-##b) Onko tietoa? Kerää jostain koneesta tiedot Saltilla, esimerkiksi käyttöjärjestelmä, vapaan muistin määrä, virtualisointi jne. Poimi tuloksesta olennaiset osat ja selitä ne. / Gather info with Salt 
+## b) Onko tietoa? Kerää jostain koneesta tiedot Saltilla, esimerkiksi käyttöjärjestelmä, vapaan muistin määrä, virtualisointi jne. Poimi tuloksesta olennaiset osat ja selitä ne. / Gather info with Salt 
   
 First, I uninstalled salt-minion and salt-master to document the process from the beginning:  
+	
 	sudo apt-get remove salt-master  
 	sudo apt-get remove salt-minion  
 	  
 Next, I installed install the same packages again:  
+	
 	sudo apt-get update  
 	sudo apt-get install -y salt-master salt-minion  
   
