Ex1, final rev 2

--- a/h1.md
+++ b/h1.md
@@ -267,7 +267,7 @@ Total run time:  52.213 ms
   
 I executed the command:  
 	
-	sudo salt '\#*' grains.items  
+	sudo salt '*' grains.items  
 	
 ![Pic 8. Grains](pics/h1/8.png)  
 *The tail end of the printout*  
@@ -373,7 +373,7 @@ Next I wanted to try out appending to a file, so I created a file:
 	  
 Appending didn't quite work out as expected:  
 	
-	sudo salt '\#*' file.append /tmp/test \ "The second sentence."  
+	sudo salt '*' file.append /tmp/test \ "The second sentence."  
 
 ````
 debian:
@@ -488,7 +488,7 @@ Computer said no, still. [A source](https://itsmycode.com/python-permissionerror
 I decided to try one last time and create the file with salt first and then edit it with salt:  
 	
 	rm /tmp/test.txt
-	sudo salt '\#*' state.single file.managed /tmp/test.txt contents="This might work"  
+	sudo salt '*' state.single file.managed /tmp/test.txt contents="This might work"  
 	
 ![Pic 13. Created a file](pics/h1/13.png)  
 *I Created a file with salt*  
@@ -591,7 +591,7 @@ I quit for the night @ 21.55.
   
 This has already been done above.
   
-##i) Vapaaehtoinen: kokeile herra-orja -arkkitehtuuria verkon yli, niin että herra ja orja ovat eri koneilla. Voit laittaa ne myös eri virtuaalikoneille. (Updated: päivitin tätä alakohtaa 2022-03-31) / Try out a master-slave arrangement over a network  
+## i) Vapaaehtoinen: kokeile herra-orja -arkkitehtuuria verkon yli, niin että herra ja orja ovat eri koneilla. Voit laittaa ne myös eri virtuaalikoneille. (Updated: päivitin tätä alakohtaa 2022-03-31) / Try out a master-slave arrangement over a network  
   
 I started work @ 16.58.  
   
@@ -619,7 +619,7 @@ Then it was time to try the Vagrant box out:
 *My result was a Virtualbox error*  
   
 ![Pic 21. couldn't exactly stop Virtualbox](pics/h1/21.png)  
-*It seemed to me that I had removed Virtualbox and somehow left Vagrant running?*  
+*It seemed to me that I had removed Virtualbox in the exercises above and somehow left Vagrant running?*  
   
 Well, then I decided to purge Virtualbox and Vagrant:  
 	
@@ -632,11 +632,11 @@ As per usual, computers never work right the first time around. I had an exotic 
 ![Pic 22. Virtual pkg's can't be removerd](pics/h1/22.png)  
 *Couldn't remove virtualbox*  
   
-I did [some searching]()https://unix.stackexchange.com/questions/596023/help-uninstalling-virtualbox and found a potential solution:  
+I did [some searching](https://unix.stackexchange.com/questions/596023/help-uninstalling-virtualbox) and found a potential solution:  
 	
 	sudo apt purge virtualbox*
 	
-The \#* at the end tells Linux to remove all virtualbox pkg's.  
+The \* at the end tells Linux to remove all virtualbox pkg's.  
   
 So, after that I tried installing vagrant again as in the beginning of this exercise.  
   
