--- a/h3.md
+++ b/h3.md
@@ -47,6 +47,20 @@ First I added this article to my course repository. My repository already existe
 	git pull
 	git push
 	
+````
+C:\Confmansys>git commit -m "Made initial commit for article"
+[main 663f965] Made initial commit for article
+ 4 files changed, 121 insertions(+), 1 deletion(-)
+ create mode 100644 h3.md
+ create mode 100644 h3.md.bak
+ create mode 100644 pics/h3/1.png
+````
+
+As it is obvious from the CLI, Git works with Windows too.  
+  
+![Pic 2. Rendered md-output](pics/h3/2.png)  
+*Going meta - rendered MarkDown in Github*  
+
 
 ## c) Kaikki kirjataan. Näytä omalla git-varastollasi esimerkit komennoista ‘git log’, ‘git diff’ ja ‘git blame’. Selitä tulokset. / Explain the output from Git-commands
 
