Add to article.

--- a/h3.md
+++ b/h3.md
@@ -155,12 +155,352 @@ e66fc9b2 (Kalle Tolonen 2022-04-01 15:49:24 +0300   3) I started @ 13.40.
 e66fc9b2 (Kalle Tolonen 2022-04-01 15:49:24 +0300   4)   
 af3c3e48 (Kalle Tolonen 2022-04-02 09:27:42 +0300   5) The source for the exercise  [Tero Karvinen](https://terokarvinen.com/2021/configuration-management-systems-2022-spring/#h1-hei-maailma--monet-tilat)
 ````
-The first element is the commit hash, the it's who did it and when. After that there's a line number and the content.  
+The first element is the commit hash, then it tells you who did it and when. After that there's a line number and the content.  
+  
+## c) Huppis! Tee tyhmä muutos gittiin, älä tee commit:tia. Tuhoa huonot muutokset ‘git reset --hard’. Huomaa, että tässä toiminnossa ei ole peruutusnappia.  / Make a mistake and cancel it
 
+A made a change in my previous assignment.
 
-## c) Huppis! Tee tyhmä muutos gittiin, älä tee commit:tia. Tuhoa huonot muutokset ‘git reset --hard’. Huomaa, että tässä toiminnossa ei ole peruutusnappia.
+	micro h2.md
+	#removed the heading
+	git diff
+
+````
+diff --git a/h2.md b/h2.md
+index 1eb8201..7a06396 100644
+--- a/h2.md
++++ b/h2.md
+@@ -1,4 +1,4 @@
+-# **h2 package-file-service**
++
+
+````
+
+After that I gave the command to reset.
+
+	git reset --hard
+
+````
+HEAD is now at 29af8ee Write more content for article. #This told me that the file was returned to a previous state
+````
+
+Just to be sure, I ran diff again.
+
+	git diff
+
+No print for the command, so no diffence.  
 
 ## d) Formula. Tee uusi salt-tila (formula, moduli, infraa koodina). (Eli uusi tiedosto esim. /srv/salt/terontila/init.sls). Voit tehdä ihan yksinkertaisen parin funktion (pkg, file...) tilan, tai edistyneemmin asentaa ja konfiguroida minkä vain uuden ohjelman: demonin, työpöytäohjelman tai komentokehotteesta toimivan ohjelman. Käytä tarvittaessa ‘find -printf “%T+ %p\n”|sort’ löytääksesi uudet asetustiedostot. / Make a new state with Salt
+
+I started by making a list of software and settings I would like to have for studying and work:  
+	Micro
+	bash-completion
+	Git
+	Gimp
+	Blender
+	Python3
+	Ufw
+	Apache2
+	Ssh
+	Pwgen
+
+My preferred settings:
+
+	Micro - softwrap = True, tabstospaces = False
+	Sudoedit = Micro
+	
+### Micro
+
+It seems to me that Micro only saves values for settings that are true, ie. it propably presumes that everything else is false. The settings are stored in:
+
+	/home/user/.config/micro/settings.json
+
+So, my first state was going to be installing Micro and making the settings I liked best. I used my previous article as [a source](https://github.com/kalletolonen/ConfManSystems/blob/main/h2.md).  
+
+	sudo mkdir /srv/salt/desktop
+	sudoedit /srv/salt/desktop/init.sls
+
+````
+micro:
+	pkg.installed
+````
+	
+	sudo salt-call --local state.apply desktop
+
+````
+[CRITICAL] Rendering SLS 'base:desktop' failed: found character that cannot start any token
+local:
+    Data failed to compile:
+----------
+    Rendering SLS 'base:desktop' failed: found character that cannot start any token
+````
+
+As a result I had a bizarre error message. Just putting the error message to Google told me that YAML was to blame and I realized that I might have just used a tab instead of spaces when writing the state. I fixed my state to have only spaces as intendations.
+
+	sudoedit /srv/salt/desktop/init.sls
+	sudo salt-call --local state.apply desktop
+
+````
+micro:
+  pkg.installed
+````
+
+````
+kallet@confmansys:~$ sudo salt-call --local state.apply desktop
+local:
+----------
+          ID: micro
+    Function: pkg.installed
+      Result: True
+     Comment: All specified packages are already installed
+     Started: 15:03:45.039126
+    Duration: 50.092 ms
+     Changes:   
+
+Summary for local
+------------
+Succeeded: 1
+Failed:    0
+------------
+Total states run:     1
+Total run time:  50.092 ms
+````
+
+That was more like it. Next it was time to add the settings I wanted in Micro.  
+
+	sudo cp .config/micro/settings.json /srv/salt/desktop/
+	#I was in my home directory for this, thus no absolute path
+	sudoedit /srv/salt/desktop/init.sls
+
+````
+micro:
+  pkg.installed
+
+/home/kallet/.config/micro/settings.json:
+  file.managed:
+    - source: salt://apache/settings.json
+````
+	
+	sudo salt-call --local state.apply desktop
+	
+````
+[ERROR   ] Source file salt://apache/settings.json not found in saltenv 'base'
+local:
+----------
+          ID: micro
+    Function: pkg.installed
+      Result: True
+     Comment: All specified packages are already installed
+     Started: 15:13:16.093812
+    Duration: 50.837 ms
+     Changes:   
+----------
+          ID: /home/kallet/.config/micro/settings.json
+    Function: file.managed
+      Result: False
+     Comment: Source file salt://apache/settings.json not found in saltenv 'base'
+     Started: 15:13:16.158954
+    Duration: 18.406 ms
+     Changes:   
+
+Summary for local
+------------
+Succeeded: 1
+Failed:    1
+------------
+Total states run:     2
+Total run time:  69.243 ms
+````
+  
+It was quite obvious that I had left a wrong path in my state. I changed it to match the real location of my config file and executed the state again.
+
+	sudoedit /srv/salt/desktop/init.sls
+
+````
+micro:
+  pkg.installed
+
+/home/kallet/.config/micro/settings.json:
+  file.managed:
+    - source: salt://micro/settings.json
+````
+
+	sudo salt-call --local state.apply desktop
+
+````
+[ERROR   ] Source file salt://micro/settings.json not found in saltenv 'base'
+local:
+----------
+          ID: micro
+    Function: pkg.installed
+      Result: True
+     Comment: All specified packages are already installed
+     Started: 15:17:32.833007
+    Duration: 48.738 ms
+     Changes:   
+----------
+          ID: /home/kallet/.config/micro/settings.json
+    Function: file.managed
+      Result: False
+     Comment: Source file salt://micro/settings.json not found in saltenv 'base'
+     Started: 15:17:32.883934
+    Duration: 18.685 ms
+     Changes:   
+
+Summary for local
+------------
+Succeeded: 1
+Failed:    1
+------------
+Total states run:     2
+Total run time:  67.423 ms
+````
+
+There wasn't a difference in errors, so I checked the location and contents of my settings.json. And I did realize, that I had the wrong location, since my state was "desktop" and not "micro".  
+	sudoedit /srv/salt/desktop/init.sls
+
+
+````
+micro:
+  pkg.installed
+
+/home/kallet/.config/micro/settings.json:
+  file.managed:
+    - source: salt://desktop/settings.json
+````
+
+	sudo salt-call --local state.apply desktop
+
+````
+local:
+----------
+          ID: micro
+    Function: pkg.installed
+      Result: True
+     Comment: All specified packages are already installed
+     Started: 15:22:29.290125
+    Duration: 48.834 ms
+     Changes:   
+----------
+          ID: /home/kallet/.config/micro/settings.json
+    Function: file.managed
+      Result: True
+     Comment: File /home/kallet/.config/micro/settings.json is in the correct state
+     Started: 15:22:29.341121
+    Duration: 19.171 ms
+     Changes:   
+
+Summary for local
+------------
+Succeeded: 2
+Failed:    0
+------------
+Total states run:     2
+Total run time:  68.005 ms
+````
+
+The new printout suggested that I had made some progress. This state will be made better in the future when we will learn about using variables in Salt states, now it will only work properly if I'm logged in as the user "kallet", since the path to Micro's settings is absolute.  
+
+Just as I was thinking about this - I think a good way to implement this sort of "my own computer on any machine"-type of thinking would be a live-usb with Linux and thus negate the need for a spesific user.  
+
+### Bash-completion
+
+This was just another pkg, so I added 2 lines of code and ran the state to make sure I hadn't made any typos.  
+
+	sudoedit /srv/salt/desktop/init.sls
+
+````
+micro:
+  pkg.installed
+
+/home/kallet/.config/micro/settings.json:
+  file.managed:
+    - source: salt://desktop/settings.json
+
+bash-completion:
+  pkg.installed
+````
+	
+	sudo salt-call --local state.apply desktop
+
+ ````
+ Summary for local
+ ------------
+ Succeeded: 3
+ Failed:    0
+ ------------
+ Total states run:     3
+ Total run time:  82.094 ms
+ ````
+
+ Now I decided to make a little test, and I removed bash-completion and micro.
+
+ 	sudo apt-get purge micro bash-completion
+
+````
+bash: micro: command not found
+````
+
+Also, hitting the tab still did complete bash command  in the cli after I restarted the terminal, so I executed my state just to see would it imply changes.
+
+	sudo salt-call --local state.apply desktop
+
+````
+local:
+----------
+          ID: micro
+    Function: pkg.installed
+      Result: True
+     Comment: The following packages were installed/updated: micro
+     Started: 15:39:52.297847
+    Duration: 2654.113 ms
+     Changes:   
+              ----------
+              micro:
+                  ----------
+                  new:
+                      2.0.8-1+b6
+                  old:
+----------
+          ID: /home/kallet/.config/micro/settings.json
+    Function: file.managed
+      Result: True
+     Comment: File /home/kallet/.config/micro/settings.json is in the correct state
+     Started: 15:39:54.954120
+    Duration: 20.565 ms
+     Changes:   
+----------
+          ID: bash-completion
+    Function: pkg.installed
+      Result: True
+     Comment: The following packages were installed/updated: bash-completion
+     Started: 15:39:54.978388
+    Duration: 3136.689 ms
+     Changes:   
+              ----------
+              bash-completion:
+                  ----------
+                  new:
+                      1:2.11-2
+                  old:
+
+Summary for local
+------------
+Succeeded: 3 (changed=2)
+Failed:    0
+------------
+Total states run:     3
+Total run time:   5.811 s
+````
+
+My guess on whyh bash-completion still continued to work was that I had multiple terminals open and the process was still running and thus it never stopped working.  
+
+I took a break @ 15.45 and made a commit.  
+
+### Blender, Gimp, Python3, Apache2, Pwgen - programs with default settings
+
+### Git, Ufw, SSH - software with custom settings
+
 
 ## f) Vapaaehtoinen: Laita srv/salt/ gittiin. Tee uusi moduli. Kloonaa varastosi toiselle koneelle (tai poista srv/salt ja palauta se kloonaamalla) ja jatka sillä. / add a Salt state to Git
 
